# surreal-ocean

./: Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json
.cache/storybook/dev-server/: a5a8bf6e622aef57065c6498611f40c911543d7d-3920d97c51b8ad2521918fb1205babd22b0ed3d7  a5a8bf6e622aef57065c6498611f40c911543d7d-43fdebe5fc35e4e9fabee9a83c7faea931b05ea0  a5a8bf6e622aef57065c6498611f40c911543d7d-f086b87885981c04ce7a583ff90a49313de83de7
.devcontainer/: devcontainer.json
.github/workflows/: build-api.yml  build-nginx.yml  build-ui.yml  chromatic.yml  deploy-api.yml  deploy-ui.yml
api/: Cargo.toml  Dockerfile
api/.cargo/: config.toml
api/src/: main.rs
api/src/bc/: api.rs  bc_structs.rs  mod.rs
api/src/enums/: kesalahan.rs  mod.rs
api/src/gh/: api.rs  fungsi.rs  mod.rs
api/src/konfigurasi/: env.rs
api/src/structs/: structs.rs
api/src/teks/: mod.rs  statik.rs
server/: .gitignore  Dockerfile  nginx.conf
src/: main.rs
ui/: .dockerignore  Dockerfile  Dockerfile.ui  actions.secrets  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/.github/workflows/: chromatic.yml
ui/.storybook/: Tema.ts  main.ts  manager.ts  preview.tsx
ui/src/: App.tsx  MantineTheme.ts  enum.ts  env.d.ts  index.css  interface.ts  main.tsx  rute.tsx  types.ts
ui/src/css/: Global.css
ui/src/fungsi/: basic.ts  gh_api.ts
ui/src/halaman/: CV.tsx
ui/src/komponen/: Footer.tsx  GarisHorizontal.tsx  Header.tsx  IkonLabel.tsx  Kode.tsx  Kontak.tsx  LayarMemuat.tsx  Portofolio.tsx  Proyek.tsx  RentangWaktu.tsx  (+3 more)
(+35 files in other folders)
