[package]
name = "surreal-ocean-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7" }
actix-web = { version = "4" }
actix-cors = { version = "0.6.4" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
lazy_static = { version = "1.4.0" }
